--- a/src/templates/7-1-Thank-you.pug
+++ b/src/templates/7-1-Thank-you.pug
@@ -8,26 +8,27 @@ block content
 
 	.barba-container(data-namespace="form-models-success")
 		.block
-			.block-grid
-				.aside.bg-brend
-					.aside-content-wrap.js-stick-parent
-						.aside-content.js-stick
-							h1 Become a model
-							p.text-middle Agency «INMODELS» is always interested in new faces. If you are interested in the work of the model and you meet the specified criteria, please use the form below.
-							h4 Options
-							p.text You are between 13 and 22 years old, height from 170 to 182 cm, waist up to 63 cm, hips up to 92 cm
-							h4 Additionally
-							p.text
-								| Attach to the questionnaire photos of the person without make-up (full face, profile, 3/4) and a full-length photograph in a swimsuit. If you have a portfolio, send it to us at 
-								a(href="mailto:info@inmodels.by") info@inmodels.by
-								|&nbsp; with their contact information.
-				.main.bg-white
-					.main-content
-						.form-success
-							.form-success__title
-								p.text-big Thank you!
-							.form-success__msg
-								p.text-middle We are very glad that you paid your attention to us.
-								p.text-middle In the near future our employee will contact you.
-							a(href="home.html").bttn.transparent
-								span Go to home page
+			.block-load
+				.block-grid
+					.aside.bg-brend
+						.aside-content-wrap.js-stick-parent
+							.aside-content.js-stick
+								h1 Become a model
+								p.text-middle Agency «INMODELS» is always interested in new faces. If you are interested in the work of the model and you meet the specified criteria, please use the form below.
+								h4 Options
+								p.text You are between 13 and 22 years old, height from 170 to 182 cm, waist up to 63 cm, hips up to 92 cm
+								h4 Additionally
+								p.text
+									| Attach to the questionnaire photos of the person without make-up (full face, profile, 3/4) and a full-length photograph in a swimsuit. If you have a portfolio, send it to us at 
+									a(href="mailto:info@inmodels.by") info@inmodels.by
+									|&nbsp; with their contact information.
+					.main.bg-white
+						.main-content
+							.form-success
+								.form-success__title
+									p.text-big Thank you!
+								.form-success__msg
+									p.text-middle We are very glad that you paid your attention to us.
+									p.text-middle In the near future our employee will contact you.
+								a(href="home.html").bttn.transparent
+									span Go to home page
