--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -545,7 +545,7 @@
 		// 	height: 500px
 		.swiper-slide
 			height: 100%
-			width: auto
+			width: 100%
 			// width: 100%
 			// max-width: 50%
 			overflow: hidden
