--- a/src/templates/2-0-models.pug
+++ b/src/templates/2-0-models.pug
@@ -10,14 +10,15 @@ block content
 			.logo-wrap.bg-brend
 				a(href="home.html")
 					+icon('logo')
-			.block-content
-				.models-page
-					+search-block
-					.models-wrap.ajax-list
-						+models-item('models-1.jpg', 'Sasha Pronenko')
-						+models-item('models-3.jpg', 'Masha Pronenko')
-						+models-item('models-4.jpg', 'Anastasia Viartsiukhova')
-						+models-item('models-5.jpg', 'Sasha Grey')
-						.ajax-pager-wrap.lazy
-							.models-load
-								a.ajax-pager-link.no-barba(href="models-add.html", data-wrapper-class="models-wrap")
+			.block-load
+				.block-content
+					.models-page
+						+search-block
+						.models-wrap.ajax-list
+							+models-item('models-1.jpg', 'Sasha Pronenko')
+							+models-item('models-3.jpg', 'Masha Pronenko')
+							+models-item('models-4.jpg', 'Anastasia Viartsiukhova')
+							+models-item('models-5.jpg', 'Sasha Grey')
+							.ajax-pager-wrap.lazy
+								.models-load
+									a.ajax-pager-link.no-barba(href="models-add.html", data-wrapper-class="models-wrap")
