--- a/src/templates/4-1-agency-models.pug
+++ b/src/templates/4-1-agency-models.pug
@@ -10,57 +10,57 @@ block content
 			.logo-wrap.bg-brend
 				a(href="home.html")
 					+icon('logo')
-			.block-content.bg-brend
-				
-				.about-content
-					.about-content__row
-						h1 for models
-						img(src="img/about-model.jpg", alt="about-model")
-						.about-content__text
-							p.text-big Our mission is to disclose the beauty of the girls and turn their complexes into dignities.
-							p.text 
-								strong We are burning with the idea of opening a new top model with the Belarusian name to the world and proving to the girls that they can succeed in modeling.
-						p.text.sub-title.sub-title--offset Comfortable
-						p.text Creating comfortable working conditions, we support models on the path of building a career, open to communication and always in touch. We work only with proven and leading world agencies, moreover, representatives of many of them know personally.
-					.about-content__full-text.text-big Our models are sent on business trips only for a work visa, because our priority is security. That is why INMODELS is one of the few in Belarus that has a license to work abroad.
-					
-					img(src="img/about-1.jpg", alt="about about")
-					.about-content__row
-						.about-content__text
-							p.text.sub-title Useful experience
-							p.text In addition to knowledge and experience in the fashion world, we have diplomas in the profession of a lawyer, an interpreter, as well as a specialist in the field of media and communications, which is very useful in our work.
-					.about-content__slider
-						.about-content__slider-wrap
-							.swiper-container.about-slider
-								.swiper-wrapper
-									.swiper-slide
-										.about-content__slide
-											img(src="img/about-model.jpg", alt="about-slider-1")
-									.swiper-slide
-										.about-content__slide
-											img(src="img/about-slider-2.jpg", alt="about-slider-2")
-									.swiper-slide
-										.about-content__slide
-											img(src="img/about-slider-1.jpg", alt="about-slider-1")
-									.swiper-slide
-										.about-content__slide
-											img(src="img/about-slider-2.jpg", alt="about-slider-2")
-									.swiper-slide
-										.about-content__slide
-											img(src="img/about-slider-1.jpg", alt="about-slider-1")
-									.swiper-slide
-										.about-content__slide
-											img(src="img/about-slider-2.jpg", alt="about-slider-2")
-								.swiper-pagination
-						.about-content__slider-msg
-							p.text-big Do you want to become the new face of INMODELS?
-							a(href="7-0-Become-model.html").bttn.transparent
-								span Become a model		
-					.link-footer
-						ul.link-footer-inner
-							li.link-footer__item
-								a.link-big.active(href="4-0-agency.html") about agency
-							li.link-footer__item
-								a.link-big(href="4-1-agency-models.html") for models
-							li.link-footer__item
-								a.link-big(href="4-2-partners.html") for partners
+			.block-load
+				.block-content.bg-brend
+					.about-content
+						.about-content__row
+							h1 for models
+							img(src="img/about-model.jpg", alt="about-model")
+							.about-content__text
+								p.text-big Our mission is to disclose the beauty of the girls and turn their complexes into dignities.
+								p.text 
+									strong We are burning with the idea of opening a new top model with the Belarusian name to the world and proving to the girls that they can succeed in modeling.
+							p.text.sub-title.sub-title--offset Comfortable
+							p.text Creating comfortable working conditions, we support models on the path of building a career, open to communication and always in touch. We work only with proven and leading world agencies, moreover, representatives of many of them know personally.
+						.about-content__full-text.text-big Our models are sent on business trips only for a work visa, because our priority is security. That is why INMODELS is one of the few in Belarus that has a license to work abroad.
+						
+						img(src="img/about-1.jpg", alt="about about")
+						.about-content__row
+							.about-content__text
+								p.text.sub-title Useful experience
+								p.text In addition to knowledge and experience in the fashion world, we have diplomas in the profession of a lawyer, an interpreter, as well as a specialist in the field of media and communications, which is very useful in our work.
+						.about-content__slider
+							.about-content__slider-wrap
+								.swiper-container.about-slider
+									.swiper-wrapper
+										.swiper-slide
+											.about-content__slide
+												img(src="img/about-model.jpg", alt="about-slider-1")
+										.swiper-slide
+											.about-content__slide
+												img(src="img/about-slider-2.jpg", alt="about-slider-2")
+										.swiper-slide
+											.about-content__slide
+												img(src="img/about-slider-1.jpg", alt="about-slider-1")
+										.swiper-slide
+											.about-content__slide
+												img(src="img/about-slider-2.jpg", alt="about-slider-2")
+										.swiper-slide
+											.about-content__slide
+												img(src="img/about-slider-1.jpg", alt="about-slider-1")
+										.swiper-slide
+											.about-content__slide
+												img(src="img/about-slider-2.jpg", alt="about-slider-2")
+									.swiper-pagination
+							.about-content__slider-msg
+								p.text-big Do you want to become the new face of INMODELS?
+								a(href="7-0-Become-model.html").bttn.transparent
+									span Become a model		
+						.link-footer
+							ul.link-footer-inner
+								li.link-footer__item
+									a.link-big.active(href="4-0-agency.html") about agency
+								li.link-footer__item
+									a.link-big(href="4-1-agency-models.html") for models
+								li.link-footer__item
+									a.link-big(href="4-2-partners.html") for partners
