--- a/src/templates/5-1-gallery-news.pug
+++ b/src/templates/5-1-gallery-news.pug
@@ -11,28 +11,29 @@ block content
 			.logo-wrap.bg-brend
 				a(href="home.html")
 					+icon('logo')
-			.block-grid
-				.aside
-					.aside-content-wrap
-						.aside-content
-							.gallery-news-title
-								h1 Sasha Pronenko
-							.gallery-news-date 20 dec 2017
-							.gallery-news-description For POLOGEORGIS furs collections
-							.gallery-news-info
-								p.text Model:
-									a(href="#") Sasha Pronenko
-								p.text Designer: Sveta Pantelу
-								p.text Brand: POLOGEORGIS
-				.main
-					.main-content
-						.gallery-news-content
-							img(src="img/gal-news-1.jpg", alt="gallery news")
-							img(src="img/gal-news-2.jpg", alt="gallery news")
-							img(src="img/gal-news-3.jpg", alt="gallery news")
-							.youtube(data-embed='VLP4UqTDgwY')
-								.play-button
-									.play-button-icon
-							+share-block
-					.gallery-news-footer
-						a.link-big(href="5-0-gallery.html") back to gallery
+			.block-load
+				.block-grid
+					.aside
+						.aside-content-wrap
+							.aside-content
+								.gallery-news-title
+									h1 Sasha Pronenko
+								.gallery-news-date 20 dec 2017
+								.gallery-news-description For POLOGEORGIS furs collections
+								.gallery-news-info
+									p.text Model:
+										a(href="#") Sasha Pronenko
+									p.text Designer: Sveta Pantelу
+									p.text Brand: POLOGEORGIS
+					.main
+						.main-content
+							.gallery-news-content
+								img(src="img/gal-news-1.jpg", alt="gallery news")
+								img(src="img/gal-news-2.jpg", alt="gallery news")
+								img(src="img/gal-news-3.jpg", alt="gallery news")
+								.youtube(data-embed='VLP4UqTDgwY')
+									.play-button
+										.play-button-icon
+								+share-block
+						.gallery-news-footer
+							a.link-big(href="5-0-gallery.html") back to gallery
