--- a/src/templates/6-0-contacts.pug
+++ b/src/templates/6-0-contacts.pug
@@ -11,62 +11,63 @@ block content
 			.logo-wrap.bg-brend
 				a(href="home.html")
 					+icon('logo')
-			.block-grid
-				.aside.bg-brend
-					.aside-content
-						h1 Contact us
-						h4 address
-						p.text-middle 210035, Smolenskaya 5-1, shopping center "Europe" office 103. Vitebsk, Belarus
-						a(href="#") Open road map
-						h4 Contact
-						.contacts-wrap
-							a.link(href="tel:+375(29)6336069") +375 (29) 633 60 69
-							a.link(href="tel:+375(33)6006069") +375 (33) 600 60 69
-							a.link(href="mailto:info@inmodels.by") info@inmodels.by
-						a(href="7-0-Become-model.html").bttn.normal
-							span Become a model
-				.main.bg-white
-					.main-content
-						.form-block
-							form(action="#").js-validate
-								.input-row
-									.input-item.c2
-										input.input-field(type="text"
-											id="user-name"
-											data-validation="required"
-											data-validation-error-msg="required field")
-										label.input-label(for="user-name") Name
-									.input-item.c2
-										input.input-field(type="tel"
-											id="user-tel")
-										label.input-label(for="user-tel") Phone
-									.input-item
-										input.input-field(type="email"
-											id="user-email"
-											data-validation="email"
-											data-validation-error-msg="required field")
-										label.input-label(for="user-email") Email
-									.input-item.input-textarea
-										textarea.input-field(type="text"
-											id="user-msg"
-											rows="1.5"
-											data-validation="required"
-											data-validation-error-msg="required field")
-										label.input-label(for="user-msg") Message
-									.input-item.c2.drop-item(action="/upload")
-										.dz-message 
-											span.drop-item__icon
-												+icon('cross')
-											.input-label Attach file
-									.input-item.c2.input-bttn
-										button.bttn.normal(type="submit" )
-											span send a message
-							.block-success
-								.block-success__title
-									p.text-big Thank you!
-								.block-success__msg
-									p.text-middle We are very glad that you paid your attention to us.
-									p.text-middle In the near future our employee will contact you.
-								a(href="home.html").bttn.transparent
-									span Go to home page
-										
+			.block-load
+				.block-grid
+					.aside.bg-brend
+						.aside-content
+							h1 Contact us
+							h4 address
+							p.text-middle 210035, Smolenskaya 5-1, shopping center "Europe" office 103. Vitebsk, Belarus
+							a(href="#") Open road map
+							h4 Contact
+							.contacts-wrap
+								a.link(href="tel:+375(29)6336069") +375 (29) 633 60 69
+								a.link(href="tel:+375(33)6006069") +375 (33) 600 60 69
+								a.link(href="mailto:info@inmodels.by") info@inmodels.by
+							a(href="7-0-Become-model.html").bttn.normal
+								span Become a model
+					.main.bg-white
+						.main-content
+							.form-block
+								form(action="#").js-validate
+									.input-row
+										.input-item.c2
+											input.input-field(type="text"
+												id="user-name"
+												data-validation="required"
+												data-validation-error-msg="required field")
+											label.input-label(for="user-name") Name
+										.input-item.c2
+											input.input-field(type="tel"
+												id="user-tel")
+											label.input-label(for="user-tel") Phone
+										.input-item
+											input.input-field(type="email"
+												id="user-email"
+												data-validation="email"
+												data-validation-error-msg="required field")
+											label.input-label(for="user-email") Email
+										.input-item.input-textarea
+											textarea.input-field(type="text"
+												id="user-msg"
+												rows="1.5"
+												data-validation="required"
+												data-validation-error-msg="required field")
+											label.input-label(for="user-msg") Message
+										.input-item.c2.drop-item(action="/upload")
+											.dz-message 
+												span.drop-item__icon
+													+icon('cross')
+												.input-label Attach file
+										.input-item.c2.input-bttn
+											button.bttn.normal(type="submit" )
+												span send a message
+								.block-success
+									.block-success__title
+										p.text-big Thank you!
+									.block-success__msg
+										p.text-middle We are very glad that you paid your attention to us.
+										p.text-middle In the near future our employee will contact you.
+									a(href="home.html").bttn.transparent
+										span Go to home page
+											
