--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -529,6 +529,7 @@
 /* swiper */
 .inner-slider
 	height: 100%
+	width: 100%
 	padding-bottom: 100px
 	display: flex
 	align-items: stretch
@@ -563,14 +564,14 @@
 		// 	height: 500px
 		.swiper-slide
 			height: 100%
-			width: 100%
+			width: auto
 			// width: 100%
-			max-width: 44%
+			// max-width: 44%
 			overflow: hidden
-			+r(768)
-				max-width: 62%
-			+r(550)
-				max-width: 82%
+			// +r(768)
+			// 	max-width: 62%
+			// +r(550)
+			// 	max-width: 82%
 			.item
 				height: 100%
 			img
@@ -578,6 +579,7 @@
 				width: auto
 				object-fit: cover
 			&.swiper-slide-video
+				width: 100%
 				max-width: 98%
 				background-color: #000000
 				+vertical
@@ -587,6 +589,8 @@
 					vertical-align: middle
 			&.swiper-slide-social
 				display: flex
+				width: 100%
+				max-width: 80%
 				.share-block
 					display: block
 					width: 100%
