--- a/src/sass/components/_inputs.sass
+++ b/src/sass/components/_inputs.sass
@@ -170,8 +170,11 @@
 		&.drop-item
 			border: none
 			cursor: pointer
+			isplay: flex
+			align-items: center
 			.dz-message
 				font-size: 0
+				position: relative
 			.drop-item__icon
 				display: inline-block
 				vertical-align: middle
