--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -54,8 +54,10 @@
 		&.hide-nav-burger
 			visibility: hidden
 			transition: opacity 0s 0s, visibility 0s 0s
-		+r(480)
-			width: 21vw
+		+r(450)
+			width: 80px
+		+r(400)
+			width: 70px
 
 	&-back
 		display: block
