--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -73,6 +73,9 @@
 		height: 20px
 		width: 112px
 		margin: 0 0 0 auto
+		color: $color
+		svg
+			fill: $color
 	+r(450)
 		padding: 30px 40px 80px 40px
 	+r(400)
