--- a/src/templates/7-0-Become-model.pug
+++ b/src/templates/7-0-Become-model.pug
@@ -112,7 +112,7 @@ block content
 									.input-row
 										.input-item.c2
 											input.input-field(
-												type="text"
+												type="tel"
 												id="model-phone"
 												)
 											label.input-label(for="model-phone") Phone
