--- a/src/templates/partials/_modals.pug
+++ b/src/templates/partials/_modals.pug
@@ -11,27 +11,33 @@
 			//- 		a.navigation-link__item.modal-link(href="/7-0-Become-model.html") Become a model
 			a(href="./home.html").link-logo
 				+icon('logo')
-			a.navigation-lang.link-lang(href="#") рус
 			.pages-links
-				ul
-					li.pages-links__item
-						a(href="./4-0-agency.html") 
-							span.modal-link Agency
-					li.pages-links__item
-						a(href="./2-0-models.html") 
-							span.modal-link Models
-					li.pages-links__item
-						a(href="./5-0-gallery.html")
-							span.modal-link Gallery
-					li.pages-links__item
-						a(href="./6-0-contacts.html")
-							span.modal-link Contacts
-					li.pages-links__item
-						a.navigation-link__item.modal-link(href="./7-0-Become-model.html") Become a model
-					li.pages-links__item
-						a.navigation-link__item.modal-link(href="./6-0-contacts.html") Business request
-					
-					
+				.pages-links-inner
+					ul
+						li.pages-links__item
+							a(href="./4-0-agency.html") 
+								span.modal-link Agency
+						li.pages-links__item
+							a(href="./2-0-models.html") 
+								span.modal-link Models
+						li.pages-links__item
+							a(href="./5-0-gallery.html")
+								span.modal-link Gallery
+						li.pages-links__item
+							a(href="./6-0-contacts.html")
+								span.modal-link Contacts
+						li.pages-links__item
+							a.navigation-link__item.modal-link(href="./7-0-Become-model.html") Become a model
+						li.pages-links__item
+							a.navigation-link__item.modal-link(href="./6-0-contacts.html") Business request
+						li.pages-links__item.pages-links--social
+							a.navigation-link__item.modal-link(href="#") facebook
+						li.pages-links__item
+							a.navigation-link__item.modal-link(href="#") instagram
+						li.pages-links__item
+							a.navigation-link__item.modal-link(href="#") vkontakte
+						li.pages-links__item
+							a.navigation-lang.link-lang(href="#") рус
 			//- .navigation-link.social-links
 			//- 	a.navigation-link__item(href="#") facebook
 			//- 	a.navigation-link__item(href="#") instagram
